[Android backup] Sync settings, and new to old version restore
Backup and restore the sync settings. Also enable restore to an
older version of Chrome than the backed up version.

BUG=616477
BUG=613205

Review-Url: https://codereview.chromium.org/2047473003
Cr-Commit-Position: refs/heads/master@{#398267}
(cherry picked from commit afa2077192b4c38c3f828c29628c54f0339f3534)

Review URL: https://codereview.chromium.org/2043303002 .

--- a/chrome/android/java/AndroidManifest.xml
+++ b/chrome/android/java/AndroidManifest.xml
@@ -103,6 +103,7 @@ by a child template that "extends" this file.
         android:largeHeap="false"
         android:allowBackup="true"
         android:fullBackupContent="@xml/chromebackupscheme"
+        android:restoreAnyVersion="true"
         {% block android_backup_agent %}
         android:backupAgent="org.chromium.chrome.browser.ChromeBackupAgent"
         {% endblock %}
