[Mac/GN] Fix typo in "Default Apps".
BUG=431177
R=thakis@chromium.org

Review URL: https://codereview.chromium.org/2056123004 .

--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -1276,7 +1276,7 @@ if (is_chrome_branded) {
       ]
     } else {
       outputs = [
-        "{{bundle_root_dir}}/Deafult Apps/{{source_file_part}}",
+        "{{bundle_root_dir}}/Default Apps/{{source_file_part}}",
       ]
     }
 
