[Mac/GN] Explicitly link ApplicationServices wherever CoreGraphics is linked.
The 10.11 SDK has an incompatibility with a OS X 10.7 deployment target.
ApplicationServices re-exports CoreGraphics, but due to a bug, the dylib
compatibility version from the re-exported framework gets confused with
the version of the framework doing the re-export.

This only manifests itself in the component build because individual
components depend on CoreGraphics directly instead of ApplicationServices.
In the static library build, the transitive collection of libs ensures that
ApplicationServices gets linked before CoreGraphics when linking the
Chromium Framework, so this doesn't occur.

To hack around the issue, specify ApplicationServices in libs ahead of
CoreGraphics so that the correct compatibility version is picked up. After
the deployment is updated to 10.8+ (https://crbug.com/580152) these hacks
can be removed.

BUG=620127
R=mark@chromium.org
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/2092513002 .

--- a/skia/BUILD.gn
+++ b/skia/BUILD.gn
@@ -522,6 +522,7 @@ component("skia") {
   if (is_mac) {
     libs = [
       "AppKit.framework",
+      "ApplicationServices.framework",  # Temporary hack around https://crbug.com/620127. Remove after https://crbug.com/622481 is fixed.
       "CoreFoundation.framework",
       "CoreGraphics.framework",
       "CoreText.framework",
