--- a/ui/display/BUILD.gn
+++ b/ui/display/BUILD.gn
@@ -113,6 +113,7 @@ component("display") {
   if (is_mac) {
     libs = [
       "AppKit.framework",
+      "ApplicationServices.framework",  # Temporary hack around https://crbug.com/620127. Remove after https://crbug.com/622481 is fixed.
       "CoreGraphics.framework",
     ]
   }
