--- a/ui/gfx/BUILD.gn
+++ b/ui/gfx/BUILD.gn
@@ -378,6 +378,7 @@ component("gfx") {
   if (is_mac) {
     libs = [
       "AppKit.framework",
+      "ApplicationServices.framework",  # Temporary hack around https://crbug.com/620127. Remove after https://crbug.com/622481 is fixed.
       "CoreFoundation.framework",
       "CoreGraphics.framework",
       "CoreText.framework",
