--- a/config.json
+++ b/config.json
@@ -52,6 +52,7 @@
     "third_party/WebKit/Source/platform/v8_inspector",
     "third_party/WebKit/Source/wtf",
     "third_party/zlib",
+    "tools",
     "tools/android",
     "tools/clang",
     "tools/code_coverage",
