--- a/chrome/renderer/BUILD.gn
+++ b/chrome/renderer/BUILD.gn
@@ -122,6 +122,7 @@ static_library("renderer") {
     "//content/public/renderer",
     "//extensions/features",
     "//media",
+    "//media:media_features",
     "//media/capture",
     "//net",
     "//ppapi/features",
