--- a/services/ui/public/cpp/input_devices/BUILD.gn
+++ b/services/ui/public/cpp/input_devices/BUILD.gn
@@ -19,20 +19,9 @@ source_set("input_devices") {
   public_deps = [
     "//services/ui/public/interfaces/input_devices",
   ]
-
-  if (is_chromeos) {
-    sources += [
-      "input_device_controller_client.cc",
-      "input_device_controller_client.h",
-    ]
-    public_deps += [
-      "//services/ui/public/interfaces:constants",
-      "//ui/ozone",
-    ]
-  }
 }
 
-if (use_ozone) {
+if (is_chromeos && use_ozone) {
   source_set("input_device_controller") {
     sources = [
       "input_device_controller.cc",
