--- a/services/ui/BUILD.gn
+++ b/services/ui/BUILD.gn
@@ -79,7 +79,10 @@ source_set("lib") {
   }
 
   if (use_ozone) {
-    deps += [ "//ui/ozone:ozone" ]
+    deps += [
+      "//services/ui/public/cpp/input_devices:input_device_controller",
+      "//ui/ozone:ozone",
+    ]
   }
 }
 
