chromeos: converts InputDeviceSettings to use mojom
This does two things:
. For classic ash case this makes chrome provide the
  ui::mojom::InputDeviceController interface. This is done so classic
  ash and mus/mash can share the same code path.
. Converts InputDeviceSettings to use InputDeviceController (via
  InputDeviceControllerClient). InputDeviceControllerClient is owned
  by BrowserProcessPlatformPartChromeos (other code in chrome will use
  it).

BUG=642863
TEST=none

Change-Id: Ie5fe579f2f7a9b60a20bae43e59198e89ddb8ec9

--- a/ui/base/ime/BUILD.gn
+++ b/ui/base/ime/BUILD.gn
@@ -163,6 +163,7 @@ component("ime") {
   if (is_chromeos) {
     deps += [
       "//chromeos",
+      "//services/ui/public/cpp/input_devices",
       "//ui/chromeos/strings",
       "//ui/events:dom_keycode_converter",
     ]
@@ -170,6 +171,12 @@ component("ime") {
       sources -= [
         "chromeos/ime_keyboard_ozone.cc",
         "chromeos/ime_keyboard_ozone.h",
+      ]
+    }
+    if (use_ozone) {
+      sources += [
+        "chromeos/ime_keyboard_mus.cc",
+        "chromeos/ime_keyboard_mus.h",
       ]
     }
     if (!use_x11) {
