chromeos: converts InputDeviceSettings to use mojom
This does two things:
. For classic ash case this makes chrome provide the
  ui::mojom::InputDeviceController interface. This is done so classic
  ash and mus/mash can share the same code path.
. Converts InputDeviceSettings to use InputDeviceController (via
  InputDeviceControllerClient). InputDeviceControllerClient is owned
  by BrowserProcessPlatformPartChromeos (other code in chrome will use
  it).

BUG=642863
TEST=none

Change-Id: I092eed07ab3a056915185f70bde200904b38361d

--- a/services/ui/public/cpp/input_devices/BUILD.gn
+++ b/services/ui/public/cpp/input_devices/BUILD.gn
@@ -19,6 +19,17 @@ source_set("input_devices") {
   public_deps = [
     "//services/ui/public/interfaces/input_devices",
   ]
+
+  if (is_chromeos) {
+    sources += [
+      "input_device_controller_client.cc",
+      "input_device_controller_client.h",
+    ]
+    public_deps += [
+      "//services/ui/public/interfaces:constants",
+      "//ui/ozone",
+    ]
+  }
 }
 
 if (use_ozone) {
