Move AndroidOverlay mojo factory to media/mojo/clients .
Was previously in media/base .

BUG=729707

Change-Id: I1a693db859cfe7e4c4a6125b4ac39e87d842fc49

--- a/media/mojo/clients/BUILD.gn
+++ b/media/mojo/clients/BUILD.gn
@@ -23,6 +23,7 @@ source_set("clients") {
   ]
 
   sources = [
+    "android_overlay_mojo_factory.h",
     "mojo_audio_decoder.cc",
     "mojo_audio_decoder.h",
     "mojo_cdm.cc",
