Move AndroidOverlay mojo factory to media/mojo/clients .
Was previously in media/base .

BUG=729707

Change-Id: I1a693db859cfe7e4c4a6125b4ac39e87d842fc49

--- a/media/gpu/BUILD.gn
+++ b/media/gpu/BUILD.gn
@@ -150,6 +150,7 @@ component("gpu") {
     "//ui/gfx/geometry",
   ]
   deps = [
+    "//media/mojo/clients:clients",
     "//ui/base",
     "//ui/display/types",
     "//ui/gl",
