--- a/media/mojo/clients/BUILD.gn
+++ b/media/mojo/clients/BUILD.gn
@@ -14,6 +14,9 @@ source_set("clients") {
     # TODO(xhwang): Only allow //media/mojo/services:media_service_unittests
     "//media/mojo/services:*",
 
+    "//media/gpu:*",
+    "//media/gpu/ipc/service:*",
+
     "//media/test/*",
 
     "//content/gpu:*",
@@ -23,6 +26,7 @@ source_set("clients") {
   ]
 
   sources = [
+    "android_overlay_mojo_factory.h",
     "mojo_audio_decoder.cc",
     "mojo_audio_decoder.h",
     "mojo_cdm.cc",
