--- a/extensions/browser/api/usb/BUILD.gn
+++ b/extensions/browser/api/usb/BUILD.gn
@@ -23,6 +23,8 @@ source_set("usb") {
     "//content/public/browser",
     "//content/public/common",
     "//device/usb",
+    "//device/usb/public/cpp",
+    "//device/usb/public/interfaces",
     "//extensions/common/api",
   ]
 
