--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -2344,6 +2344,7 @@ split_static_library("ui") {
     deps += [
       "//chrome/browser:jni_headers",
       "//components/web_contents_delegate_android",
+      "//device/usb/public/cpp",
     ]
     deps -= [ "//ui/events" ]
   } else {
