Create a separate component for UrlPatternIndex.
Bug: 713774
Change-Id: I12a70bc0b5caa37470ecf53568d90304c05095eb

--- a/components/url_pattern_index/flat/BUILD.gn
+++ b/components/url_pattern_index/flat/BUILD.gn
@@ -4,11 +4,8 @@
 
 import("//third_party/flatbuffers/flatbuffer.gni")
 
-flatbuffer("flatbuffer") {
+flatbuffer("url_pattern_index") {
   sources = [
-    "indexed_ruleset.fbs",
+    "url_pattern_index.fbs",
   ]
-  # deps = [
-  #   "//components/url_pattern_index/flat:url_pattern_index",
-  # ]
 }
