--- a/components/subresource_filter/core/browser/BUILD.gn
+++ b/components/subresource_filter/core/browser/BUILD.gn
@@ -50,7 +50,7 @@ source_set("unit_tests") {
     "//base/test:test_support",
     "//components/prefs:test_support",
     "//components/subresource_filter/core/common:test_support",
-    "//components/subresource_filter/core/common/proto",
+    "//components/url_pattern_index/proto:url_pattern_index",
     "//components/variations",
     "//testing/gmock",
     "//testing/gtest",
