Add a MediaEngagementScore class to manage storing the score.
Add a MediaEngagementScore class that manages calculating the total
score as well as storing/reading the score for an origin from the
content settings store. Register the setting to be synced across
devices.

BUG=731750

Change-Id: I30e1ceb815c252d5f0395a8d10b905e7a6c9914b

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -574,6 +574,8 @@ split_static_library("browser") {
     "media/media_device_id_salt.h",
     "media/media_engagement_contents_observer.cc",
     "media/media_engagement_contents_observer.h",
+    "media/media_engagement_score.cc",
+    "media/media_engagement_score.h",
     "media/media_engagement_service.cc",
     "media/media_engagement_service.h",
     "media/media_engagement_service_factory.cc",
