--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -316,8 +316,6 @@ source_set("common") {
     "sandbox_win.h",
     "savable_subframe.h",
     "send_zygote_child_ping_linux.cc",
-    "service_manager/embedded_service_runner.cc",
-    "service_manager/embedded_service_runner.h",
     "service_manager/service_manager_connection_impl.cc",
     "service_manager/service_manager_connection_impl.h",
     "service_worker/embedded_worker_messages.h",
@@ -419,6 +417,7 @@ source_set("common") {
     "//services/resource_coordinator/public/cpp:resource_coordinator_cpp",
     "//services/service_manager",
     "//services/service_manager/embedder",
+    "//services/service_manager/embedder/runner",
     "//services/service_manager/public/cpp",
     "//services/service_manager/public/interfaces",
     "//services/service_manager/runner/common",
