Add keyboard brightness notification popup
This mirrors the display brightness popup except that it is not
interactive.

BUG=chromium:540833
TEST=unit tests TBD

Change-Id: I34cbeb3f8ca61303cb784799e74def020f218544

--- a/ash/resources/vector_icons/BUILD.gn
+++ b/ash/resources/vector_icons/BUILD.gn
@@ -152,6 +152,8 @@ aggregate_vector_icons("ash_vector_icons") {
     "system_menu_info.icon",
     "system_menu_keyboard.1x.icon",
     "system_menu_keyboard.icon",
+    "system_menu_keyboard_brightness.1x.icon",
+    "system_menu_keyboard_brightness.icon",
     "system_menu_lock.1x.icon",
     "system_menu_lock.icon",
     "system_menu_mouse.1x.icon",
