--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -385,6 +385,8 @@ component("ash") {
     "system/keyboard_brightness/keyboard_brightness_controller.cc",
     "system/keyboard_brightness/keyboard_brightness_controller.h",
     "system/keyboard_brightness_control_delegate.h",
+    "system/keyboard_brightness/tray_keyboard_brightness.cc",
+    "system/keyboard_brightness/tray_keyboard_brightness.h",
     "system/locale/locale_notification_controller.cc",
     "system/locale/locale_notification_controller.h",
     "system/lock_screen_action/lock_screen_action_tray.cc",
