--- a/components/update_client/BUILD.gn
+++ b/components/update_client/BUILD.gn
@@ -155,6 +155,7 @@ source_set("unit_tests") {
     ":unit_tests_bundle_data",
     ":update_client",
     "//base",
+    "//components/crx_file",
     "//components/prefs",
     "//components/prefs:test_support",
     "//components/version_info:version_info",
