chromeos: moves ash/shared to ash/public/cpp
The two should be combined given they share the same
role. ash/shared/immersive needs a cleanup (it predates the switch
back to aura), but I'm holding off on that until it becomes clear as
to which direction we want to take immersive going forward.

BUG=704615
TEST=none

Change-Id: Ie805238757577a07570815234e7908d15c647673

--- a/ash/public/cpp/BUILD.gn
+++ b/ash/public/cpp/BUILD.gn
@@ -5,12 +5,24 @@
 # C++ headers and sources that can be used outside ash.
 component("ash_public_cpp") {
   sources = [
+    "app_types.h",
     "ash_pref_names.cc",
     "ash_pref_names.h",
     "ash_public_export.h",
     "ash_typography.cc",
     "ash_typography.h",
     "config.h",
+    "immersive/immersive_context.cc",
+    "immersive/immersive_context.h",
+    "immersive/immersive_focus_watcher.h",
+    "immersive/immersive_fullscreen_controller.cc",
+    "immersive/immersive_fullscreen_controller.h",
+    "immersive/immersive_fullscreen_controller_delegate.h",
+    "immersive/immersive_gesture_handler.h",
+    "immersive/immersive_handler_factory.cc",
+    "immersive/immersive_handler_factory.h",
+    "immersive/immersive_revealed_lock.cc",
+    "immersive/immersive_revealed_lock.h",
     "mus_property_mirror_ash.cc",
     "mus_property_mirror_ash.h",
     "remote_shelf_item_delegate.cc",
