cros: Add debug overlay for views-lock screen.
Bug: 719015
Change-Id: I9d5ef312a85ded1af29d6fabb078bdfedbdc04da

--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -201,6 +201,8 @@ component("ash") {
     "login/lock_screen_controller.h",
     "login/ui/lock_contents_view.cc",
     "login/ui/lock_contents_view.h",
+    "login/ui/lock_debug_view.cc",
+    "login/ui/lock_debug_view.h",
     "login/ui/lock_screen.cc",
     "login/ui/lock_screen.h",
     "login/ui/lock_window.cc",
