viz: Move GLHelper to viz/common/.
This is used by anyone with access to a GLES2Interface which is not
only in the service, or for use with the display compositor. So move
to viz/common/. The benchmarks test helpers move into viz/common/test/.

R=kylechar@chromium.org
TBR=jam@chromium.org

Bug: 722935
Change-Id: Ie73b2f2fd73271b57beb33a3bd446333672e5d63

--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -250,6 +250,7 @@ static_library("test_support") {
     "//cc/ipc:interfaces",
     "//cc/surfaces",
     "//components/leveldb/public/interfaces",
+    "//components/viz/common",
     "//components/viz/host",
     "//components/viz/service",
     "//content/app:both_for_content_tests",
@@ -1506,6 +1507,7 @@ test("content_unittests") {
     "//components/rappor:test_support",
     "//components/ukm:test_support",
     "//components/ukm/public/interfaces",
+    "//components/viz/common",
     "//components/viz/host",
     "//components/viz/service",
     "//content:resources",
