Disable chumpdetector on release branches
Bug: 736079
Change-Id: Ib39c0bbcda7d2ab0098f2d112ebe5a5e886b097a

--- a/chumpdetector.config
+++ b/chumpdetector.config
@@ -3,4 +3,4 @@
   statusURL = https://chromium-status.appspot.com/current?format=json
   withCredentials = false
   enforceCommitQueue = true
-  disabledBranchPattern = refs/meta/config
+  disabledBranchPattern = ^(?:refs/meta/config|refs/branch-heads/.*)$
