--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -418,6 +418,8 @@ split_static_library("browser") {
     "favicon/large_icon_service_factory.h",
     "feature_engagement_tracker/feature_engagement_tracker_factory.cc",
     "feature_engagement_tracker/feature_engagement_tracker_factory.h",
+    "feature_engagement_tracker/new_tab_feature_engagement_tracker.cc",
+    "feature_engagement_tracker/new_tab_feature_engagement_tracker.h",
     "file_select_helper.cc",
     "file_select_helper.h",
     "file_select_helper_mac.mm",
