--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -1100,6 +1100,7 @@ split_static_library("ui") {
       "//components/network_session_configurator/common",
       "//components/proximity_auth/webui",
       "//components/ui_metrics",
+      "//components/vector_icons:vector_icons",
       "//components/web_modal",
       "//components/zoom",
       "//device/bluetooth",
