--- a/components/BUILD.gn
+++ b/components/BUILD.gn
@@ -39,10 +39,6 @@ if (is_ios) {
 # no tests will run) and add a reference here. You can add more than one unit
 # test target if convenient.
 test("components_unittests") {
-  sources = [
-    "test/run_all_unittests.cc",
-  ]
-
   if (is_android || is_linux || is_mac || is_win) {
     data = [
       "test/data/",
@@ -62,6 +58,7 @@ test("components_unittests") {
   # test source set and not here.
 
   deps = [
+    "test:run_all_unittests",
     "//base",
     "//components/autofill/core/browser:unit_tests",
     "//components/autofill/core/common:unit_tests",
@@ -141,7 +138,6 @@ test("components_unittests") {
     "//components/sync_preferences:unit_tests",
     "//components/sync_sessions:unit_tests",
     "//components/task_scheduler_util/common:unit_tests",
-    "//components/test:test_support",
     "//components/translate/core/browser:unit_tests",
     "//components/translate/core/common:unit_tests",
     "//components/translate/core/language_detection:unit_tests",
