Add simple startup test
Bug:
Change-Id: I6378477249aecff89035c3c9297ba59ecdd86a4f

--- a/ios/clean/chrome/test/BUILD.gn
+++ b/ios/clean/chrome/test/BUILD.gn
@@ -9,6 +9,7 @@ group("all_tests") {
   testonly = true
   deps = [
     ":ios_clean_chrome_unittests",
+    "//ios/clean/chrome/test/performance:ios_clean_skeleton_egtests",
   ]
 }
 
