Added interface and implementation stubs for FeatureEngagementTrackerFactory on iOS.
R=edchin@chromium.org, gchatz@chromium.org, sdefresne@chromium.org

Bug: none
Change-Id: I32cff6432e90a1d781fbe4c0b1b6efa1496ddc67

--- a/ios/chrome/browser/BUILD.gn
+++ b/ios/chrome/browser/BUILD.gn
@@ -111,6 +111,7 @@ source_set("browser") {
     "//google_apis",
     "//ios/chrome/app/strings",
     "//ios/chrome/browser/browser_state",
+    "//ios/chrome/browser/feature_engagement_tracker",
     "//ios/chrome/browser/sync/glue",
     "//ios/chrome/common",
     "//ios/components/io_thread",
