--- a/components/BUILD.gn
+++ b/components/BUILD.gn
@@ -195,6 +195,7 @@ test("components_unittests") {
       "//components/download/content:unit_tests",
       "//components/error_page/renderer:unit_tests",
       "//components/favicon/content:unit_tests",
+      "//components/feature_engagement_tracker:unit_tests",
       "//components/gcm_driver/instance_id:unit_tests",
       "//components/history/content/browser:unit_tests",
       "//components/invalidation/impl:unit_tests",
