--- a/components/viz/common/BUILD.gn
+++ b/components/viz/common/BUILD.gn
@@ -2,13 +2,22 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//testing/test.gni")
+
 source_set("common") {
   sources = [
+    "gl_helper.cc",
+    "gl_helper.h",
+    "gl_helper_readback_support.cc",
+    "gl_helper_readback_support.h",
+    "gl_helper_scaling.cc",
+    "gl_helper_scaling.h",
     "server_gpu_memory_buffer_manager.cc",
     "server_gpu_memory_buffer_manager.h",
   ]
 
   deps = [
+    "//gpu/command_buffer/client:gles2_interface",
     "//gpu/ipc/client",
     "//gpu/ipc/common",
     "//services/ui/gpu/interfaces",
@@ -25,12 +34,53 @@ source_set("unit_tests") {
   testonly = true
   sources = [
     "server_gpu_memory_buffer_manager_unittest.cc",
+    "yuv_readback_unittest.cc",
   ]
+
+  if (is_android) {
+    sources += [
+      # Many of these fail on Android with the test GL implementation.
+      "gl_helper_unittest.cc",
+    ]
+  }
 
   deps = [
     ":common",
     "//base/test:test_support",
+    "//gpu/command_buffer/client:gles2_implementation",
+    "//gpu/command_buffer/client:gles2_interface",
+    "//gpu/ipc:gl_in_process_context",
+    "//media",
     "//services/ui/gpu/interfaces",
     "//testing/gtest",
+  ]
+}
+
+# Microbenchmark to measure performance of GLHelper code, for use in
+# debugging, profiling, and optimizing.
+test("viz_benchmark") {
+  sources = [
+    "gl_helper_benchmark.cc",
+  ]
+
+  configs += [
+    "//build/config/compiler:no_size_t_to_int_warning",
+    "//third_party/khronos:khronos_headers",
+  ]
+
+  deps = [
+    ":common",
+    "//base",
+    "//base/test:test_support",
+    "//components/test:run_all_unittests",
+    "//gpu/command_buffer/client",
+    "//gpu/command_buffer/client:gles2_implementation",
+    "//gpu/ipc:gl_in_process_context",
+    "//testing/gmock",
+    "//testing/gtest",
+  ]
+
+  data_deps = [
+    "//third_party/mesa:osmesa",
   ]
 }
