Initialize HostFrameSinkManager in tests.
This CL causes ui::InitializeContextFactoryForTests() to initialize
HostFrameSinkManager. This involves Mojo and requires that some test
targets call mojo::edk::Init() as a result.

Bug: TBD
Change-Id: I984dc0fcc5d3dfb8ae6bd645e646660af99633e9

--- a/ui/views/BUILD.gn
+++ b/ui/views/BUILD.gn
@@ -779,6 +779,7 @@ static_library("test_support_internal") {
     "//base/test:test_support",
     "//gpu/ipc/service",
     "//ipc:test_support",
+    "//mojo/edk/system",
     "//skia",
     "//testing/gtest",
     "//ui/base",
@@ -1090,6 +1091,7 @@ test("views_unittests") {
 
   deps = [
     ":views_unittests_sources",
+    "//mojo/edk/system",
   ]
 }
 
@@ -1105,6 +1107,7 @@ if (is_mac) {
       ":views",
       "//base",
       "//base/test:test_support",
+      "//mojo/edk/system",
       "//skia",
       "//testing/gtest",
       "//ui/base:test_support",
