--- a/ui/app_list/BUILD.gn
+++ b/ui/app_list/BUILD.gn
@@ -266,6 +266,7 @@ test("app_list_unittests") {
     ":test_support",
     "//base",
     "//base/test:test_support",
+    "//mojo/edk/system",
     "//skia",
     "//testing/gtest",
     "//ui/base",
