[Offline Prefetch] Use download API to download prefetch archive
Currently only hook up with offline internals page.

BUG=733869

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ic8212c1b32d9c64d08a49b8222546bfe25f33bfa

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -2181,6 +2181,8 @@ split_static_library("browser") {
       "offline_pages/offliner_user_data.h",
       "offline_pages/prefetch/offline_metrics_collector_impl.cc",
       "offline_pages/prefetch/offline_metrics_collector_impl.h",
+      "offline_pages/prefetch/offline_prefetch_download_client.cc",
+      "offline_pages/prefetch/offline_prefetch_download_client.h",
       "offline_pages/prefetch/prefetch_instance_id_proxy.cc",
       "offline_pages/prefetch/prefetch_instance_id_proxy.h",
       "offline_pages/prefetch/prefetch_service_factory.cc",
