--- a/components/offline_pages/core/BUILD.gn
+++ b/components/offline_pages/core/BUILD.gn
@@ -37,6 +37,8 @@ static_library("core") {
     "offline_page_storage_manager.h",
     "offline_page_types.h",
     "offline_store_types.h",
+    "page_renovation.h",
+    "page_renovation_loader.h",
     "snapshot_controller.cc",
     "snapshot_controller.h",
     "task.cc",
