[Offline Pages] Adds a variations parameter for the offline pages endpoint.
Additionally, removes the staging server URL since we don't intend for any
legitimate clients to hit that URL.

Bug: None
Change-Id: I95475d3cec08fcba10fd0fd39e4a473d8da0d8ba

--- a/components/offline_pages/core/prefetch/BUILD.gn
+++ b/components/offline_pages/core/prefetch/BUILD.gn
@@ -48,6 +48,7 @@ static_library("prefetch") {
     "//components/ntp_snippets",
     "//components/offline_pages/core",
     "//components/offline_pages/core:switches",
+    "//components/variations:variations",
     "//components/version_info",
     "//google_apis",
     "//net:net",
@@ -107,6 +108,7 @@ source_set("unit_tests") {
     "//components/offline_pages/core",
     "//components/offline_pages/core:switches",
     "//components/offline_pages/core:test_support",
+    "//components/variations:test_support",
     "//net:test_support",
     "//testing/gmock",
     "//testing/gtest",
