Setup fieldtrials within WebView
In order to enable Finch for WebView we will start by first creating fieldtrials
at WebView startup. The setup process for WebView can closely mirror
the process for Chrome, and code will be refactored and shared where
possible.

There are three main stages in this setup:

Create an entropy source for trial randomization. This can be accomplished 
either by reading the GUID from a file or creating it if one does not already
exist.

Parsing command line flags to allow trials to be forced at the command
line. To accomplish this some of these switches are relocated
to a location common to Chrome and WebView.

Creating the trials from the seed stored in persistent storage. In
Chrome trials are stored within the LocalState file, and are loaded
during the regular startup process. To accomplish the same thing within
WebView we will a similar file and read it during the WebView
startup process. This change is not yet implemented but will be added
shortly. 


BUG=678288

Change-Id: I2169c09d16705f8ea4a41b5bb5709465ffb44080

--- a/components/variations/field_trial_config/BUILD.gn
+++ b/components/variations/field_trial_config/BUILD.gn
@@ -41,7 +41,11 @@ static_library("field_trial_config") {
   deps = [
     ":field_trial_testing_config_action",
     "//base",
+    "//cc/base",
+    "//components/flags_ui",
     "//components/variations",
+    "//components/variations/service",
+    "//content/public/common",
     "//net",
   ]
 }
