[Not ready] Add a crash-resistant net log observer.
When it receives an event, it writes to file and flush immediately. This is
useful for ClusterFuzz because it'll write the NetLogEntry before crashing.

Bug: 715656
Change-Id: I18e96afb5c5deb84d51691760606c79061751369

--- a/net/BUILD.gn
+++ b/net/BUILD.gn
@@ -985,6 +985,8 @@ component("net") {
       "log/trace_net_log_observer.h",
       "log/write_to_file_net_log_observer.cc",
       "log/write_to_file_net_log_observer.h",
+      "log/log_urls_to_file.cc",
+      "log/log_urls_to_file.h",
       "nqe/cached_network_quality.cc",
       "nqe/cached_network_quality.h",
       "nqe/effective_connection_type.cc",
