--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -553,6 +553,7 @@ static_library("constants") {
     "//rlz/features",
   ]
   deps = [
+    ":channel_info",
     ":version_header",
     "//base",
     "//base/third_party/dynamic_annotations",
