The spare child connection now takes a connection allocator.
Bug:
Change-Id: I69a7ab6fe0261355723b53c13c0b744e9332e332

--- a/content/public/android/BUILD.gn
+++ b/content/public/android/BUILD.gn
@@ -469,6 +469,7 @@ junit_binary("content_junit_tests") {
     "junit/src/org/chromium/content/browser/ChildConnectionAllocatorTest.java",
     "junit/src/org/chromium/content/browser/MenuDescriptorTest.java",
     "junit/src/org/chromium/content/browser/SpareChildConnectionTest.java",
+    "junit/src/org/chromium/content/browser/TestChildProcessConnection.java",
     "junit/src/org/chromium/content/browser/androidoverlay/DialogOverlayCoreTest.java",
     "junit/src/org/chromium/content/browser/input/RangeTest.java",
     "junit/src/org/chromium/content/browser/input/TextInputStateTest.java",
