Embed Service Manager in //ios/web
This CL adds an embedding of the Service Manager in //ios/web, such that
it is now possible to host and connect to services in //ios/{web, chrome}.

The infrastructure is based on that for //content but simplified and
adapted to the context of //ios, where multiprocess does not exist.

Concretely, this CL does the following things:
(1) Adds ServiceManagerConnection as an //ios/web public interface. This
is the gateway for connecting to services for //ios.
(2) Adds ServiceManagerContext, which embeds an in-process ServiceManager.
(3) Adds ServiceManagerConnectionImpl, which gets a connection to the
ServiceManager.
(4) Adds the ability for //ios/web and its clients to register global
services.
(5) Adds an Earl Grey test in //ios/web/shell that hosts the echo service
and tests the ability to connect to that service. This test also serves
as an example usage of the infrastructure added in this CL.
(6) Adds shell grit resources in order to allow the shell to package an
overlay of the web_browser service manifest.

Support for per-user services will be added in a followup CL.

Bug: 731588
Change-Id: Iaf057b6bbf1f7d218bde65f21ec7c7dfc89b2e2f

--- a/ios/web/BUILD.gn
+++ b/ios/web/BUILD.gn
@@ -33,7 +33,13 @@ source_set("web_arc") {
     "//ios/third_party/blink:html_tokenizer",
     "//mojo/public/cpp/system",
     "//mojo/public/js",
+    "//services/catalog/public/cpp",
+    "//services/service_manager",
+    "//services/service_manager/embedder/public",
+    "//services/service_manager/embedder/runner",
     "//services/service_manager/public/cpp",
+    "//services/service_manager/runner/common",
+    "//services/service_manager/runner/host:lib",
     "//ui/base",
     "//ui/gfx",
     "//ui/gfx/geometry",
@@ -54,6 +60,8 @@ source_set("web_arc") {
     "interstitials/web_interstitial_impl.h",
     "interstitials/web_interstitial_impl.mm",
     "load_committed_details.cc",
+    "merge_dictionary.cc",
+    "merge_dictionary.h",
     "navigation/crw_session_controller+private_constructors.h",
     "navigation/crw_session_controller.h",
     "navigation/crw_session_controller.mm",
@@ -132,6 +140,7 @@ source_set("web_arc") {
     "public/referrer_util.h",
     "public/security_style.h",
     "public/serializable_user_data_manager.h",
+    "public/service_manager_connection.h",
     "public/ssl_status.cc",
     "public/ssl_status.h",
     "public/url_data_source_ios.h",
@@ -183,6 +192,10 @@ source_set("web_arc") {
     "public/webui/web_ui_ios_controller_factory.h",
     "public/webui/web_ui_ios_message_handler.cc",
     "public/webui/web_ui_ios_message_handler.h",
+    "service_manager_connection_impl.cc",
+    "service_manager_connection_impl.h",
+    "service_manager_context.h",
+    "service_manager_context.mm",
     "url_scheme_util.mm",
     "url_util.cc",
     "web_kit_constants.cc",
@@ -868,6 +881,8 @@ grit("resources") {
     "root_gen_dir=" + rebase_path(root_gen_dir, root_build_dir),
   ]
   deps = [
+    "//ios/web/public/app:browser_manifest",
+    "//ios/web/public/app:packaged_services_manifest",
     "//mojo/public/js:bindings",
   ]
 }
