--- a/ios/web/shell/BUILD.gn
+++ b/ios/web/shell/BUILD.gn
@@ -4,6 +4,7 @@
 
 import("//build/config/ios/rules.gni")
 import("//ios/build/config.gni")
+import("//tools/grit/grit_rule.gni")
 import("//tools/grit/repack.gni")
 
 ios_app_bundle("ios_web_shell") {
@@ -35,13 +36,26 @@ bundle_data("shell_bundle_data") {
   ]
 }
 
+grit("resources") {
+  visibility = [ ":*" ]
+  source = "shell_resources.grd"
+  outputs = [
+    "grit/shell_resources.h",
+    "shell_resources.pak",
+  ]
+}
+
 repack("packed_resources") {
   visibility = [ ":shell" ]
   sources = [
     "$root_gen_dir/ios/web/ios_web_resources.pak",
+    "$root_gen_dir/ios/web/shell/shell_resources.pak",
   ]
   deps = [
     "//ios/web:resources",
+  ]
+  public_deps = [
+    ":resources",
   ]
   output = "$target_gen_dir/web_shell_resources.pak"
   copy_data_to_bundle = true
@@ -78,6 +92,8 @@ source_set("shell") {
     "//ios/web/public/app",
     "//net",
     "//net:extras",
+    "//services/test/echo:lib",
+    "//services/test/echo/public/interfaces",
     "//ui/base",
   ]
 
