--- a/ios/web/public/app/BUILD.gn
+++ b/ios/web/public/app/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2015 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//services/service_manager/public/service_manifest.gni")
 
 source_set("app") {
   sources = [
@@ -27,4 +28,14 @@ source_set("app") {
   ]
 
   configs += [ "//build/config/compiler:enable_arc" ]
+}
+
+service_manifest("packaged_services_manifest") {
+  name = "web_packaged_services"
+  source = "mojo/web_packaged_services_manifest.json"
+}
+
+service_manifest("browser_manifest") {
+  name = "web_browser"
+  source = "mojo/web_browser_manifest.json"
 }
