--- a/components/webdata/common/BUILD.gn
+++ b/components/webdata/common/BUILD.gn
@@ -60,6 +60,7 @@ bundle_data("unit_tests_bundle_data") {
     "//components/test/data/web_database/version_71.sql",
     "//components/test/data/web_database/version_72.sql",
     "//components/test/data/web_database/version_73.sql",
+    "//components/test/data/web_database/version_73_with_type_column.sql",
   ]
   outputs = [
     "{{bundle_resources_dir}}/" +
