--- a/ios/chrome/browser/ui/settings/BUILD.gn
+++ b/ios/chrome/browser/ui/settings/BUILD.gn
@@ -112,6 +112,7 @@ source_set("settings") {
     "//components/browsing_data/core",
     "//components/content_settings/core/browser",
     "//components/content_settings/core/common",
+    "//components/feature_engagement_tracker/public",
     "//components/google/core/browser",
     "//components/handoff",
     "//components/history/core/browser",
@@ -142,6 +143,7 @@ source_set("settings") {
     "//ios/chrome/browser/browser_state:browser_state_impl",
     "//ios/chrome/browser/browsing_data",
     "//ios/chrome/browser/content_settings",
+    "//ios/chrome/browser/feature_engagement_tracker",
     "//ios/chrome/browser/history",
     "//ios/chrome/browser/passwords",
     "//ios/chrome/browser/physical_web",
