--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1525,6 +1525,7 @@ chrome_test_java_sources = [
   "javatests/src/org/chromium/chrome/browser/physicalweb/UrlManagerTest.java",
   "javatests/src/org/chromium/chrome/browser/policy/CombinedPolicyProviderTest.java",
   "javatests/src/org/chromium/chrome/browser/payments/CurrencyFormatterTest.java",
+  "javatests/src/org/chromium/chrome/browser/payments/PaymentManifestDownloaderTest.java",
   "javatests/src/org/chromium/chrome/browser/payments/PaymentManifestParserTest.java",
   "javatests/src/org/chromium/chrome/browser/payments/PaymentRequestAbortTest.java",
   "javatests/src/org/chromium/chrome/browser/payments/PaymentRequestBasicCardTest.java",
