--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -1767,6 +1767,7 @@ if (is_android) {
       deps += [
         "//device/gamepad",
         "//device/sensors",
+        "//ui/events/devices",
       ]
     }
   }
