--- a/chrome/browser/android/vr_shell/BUILD.gn
+++ b/chrome/browser/android/vr_shell/BUILD.gn
@@ -85,7 +85,11 @@ static_library("vr_common") {
     "ui_elements/ui_element_debug_id.h",
     "ui_elements/url_bar.cc",
     "ui_elements/url_bar.h",
+    "ui_input_manager.cc",
+    "ui_input_manager.h",
     "ui_interface.h",
+    "ui_renderer.cc",
+    "ui_renderer.h",
     "ui_scene.cc",
     "ui_scene.h",
     "ui_scene_manager.cc",
