--- a/components/viz/common/BUILD.gn
+++ b/components/viz/common/BUILD.gn
@@ -12,6 +12,10 @@ source_set("common") {
     "gl_helper_readback_support.h",
     "gl_helper_scaling.cc",
     "gl_helper_scaling.h",
+    "quads/resource_format.h",
+    "resources/platform_color.h",
+    "resources/resource_format_utils.cc",
+    "resources/resource_format_utils.h",
   ]
 
   deps = [
@@ -29,6 +33,7 @@ source_set("common") {
 source_set("unit_tests") {
   testonly = true
   sources = [
+    "resources/platform_color_unittest.cc",
     "yuv_readback_unittest.cc",
   ]
 
