--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -618,6 +618,7 @@ mojom("mojo_bindings") {
     "service_worker/service_worker_types.mojom",
     "storage_partition_service.mojom",
     "video_capture.mojom",
+    "widget.mojom",
     "worker_url_loader_factory_provider.mojom",
   ]
 
