[GRC] Revert UKM integration in favor of /service/metrics/public
Due to software layering issues UKM was currently inaccessible to GRC
and an additional mojo interface (e.g. ServiceCallbacks) was created
and used to make UKM accesible within GRC.

Recently a CL (https://chromium-review.googlesource.com/c/536933/)
landed that removes this software layering issue and UKM is now
directly accessible within services/ code.

This CL removes the code that is no longer needed to access UKM
directly within GRC.

Bug: 724306
Change-Id: I14135054bcccb3f931a29fbb508528256759f7d1

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -84,7 +84,7 @@
           "face_detection",
           "text_detection"
         ],
-        "resource_coordinator": [ "coordination_unit", "service_callbacks" ],
+        "resource_coordinator": [ "coordination_unit" ],
         "video_capture": [ "capture", "tests" ]
       }
     },
