arc: Add UMA to track first ARC app launch request.
This tracks the time from when UI is shown to user after sign in to
when the user activates first ARC app.

TEST=Manually on device
BUG=b/63276467

Change-Id: If77dbcba01e0d17dd702887c22e60706f7311928

--- a/chrome/browser/chromeos/BUILD.gn
+++ b/chrome/browser/chromeos/BUILD.gn
@@ -1032,6 +1032,7 @@ source_set("chromeos") {
     "login/ui/login_display_host.h",
     "login/ui/login_display_host_impl.cc",
     "login/ui/login_display_host_impl.h",
+    "login/ui/login_display_host_observer.h",
     "login/ui/login_feedback.cc",
     "login/ui/login_feedback.h",
     "login/ui/login_web_dialog.cc",
