--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -176,6 +176,8 @@ source_set("common") {
     "input/input_event_dispatch_type.h",
     "input/input_event_stream_validator.cc",
     "input/input_event_stream_validator.h",
+    "input/input_event_struct_traits.cc",
+    "input/input_event_struct_traits.h",
     "input/input_param_traits.cc",
     "input/input_param_traits.h",
     "input/synthetic_gesture_packet.cc",
