--- a/chrome/browser/android/vr_shell/BUILD.gn
+++ b/chrome/browser/android/vr_shell/BUILD.gn
@@ -92,6 +92,8 @@ static_library("vr_common") {
     "ui_input_manager.cc",
     "ui_input_manager.h",
     "ui_interface.h",
+    "ui_renderer.cc",
+    "ui_renderer.h",
     "ui_scene.cc",
     "ui_scene.h",
     "ui_scene_manager.cc",
