--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -530,6 +530,10 @@ source_set("common") {
     "browser/aw_settings.h",
     "browser/aw_ssl_host_state_delegate.cc",
     "browser/aw_ssl_host_state_delegate.h",
+    "browser/aw_variations_field_trial_creator.cc",
+    "browser/aw_variations_field_trial_creator.h",
+    "browser/aw_variations_service_client.cc",
+    "browser/aw_variations_service_client.h",
     "browser/aw_web_contents_delegate.cc",
     "browser/aw_web_contents_delegate.h",
     "browser/aw_web_contents_view_delegate.cc",
@@ -715,6 +719,8 @@ source_set("common") {
     "//components/spellcheck:build_features",
     "//components/supervised_user_error_page",
     "//components/supervised_user_error_page:gin",
+    "//components/variations",
+    "//components/variations/service",
     "//components/version_info",
     "//components/visitedlink/browser",
     "//components/visitedlink/renderer",
