--- a/BUILD.gn
+++ b/BUILD.gn
@@ -296,6 +296,7 @@ group("gn_all") {
       "//tools/android/customtabs_benchmark:customtabs_benchmark_apk",
       "//tools/android/kerberos/SpnegoAuthenticator:spnego_authenticator_apk",
       "//tools/cygprofile:cygprofile_unittests",
+      "//tools/perf/contrib/vr_benchmarks:vr_perf_tests",
       "//ui/android:ui_junit_tests",
     ]
     deps -= [
