Re-add ios-device to the CQ as a 100% experiment.
Now that ios-device has 2x the capacity, we can try adding
it back to the CQ and see how things look. ios-simulator-xcode-clang
and ios-device-xcode-clang remain out of the CQ.

TBR=smut@google.com, jbudorick@chromium.org
BUG=739556

Change-Id: I6eb897cd79d670305e97e4e29a6b6cd65bc7b69c

--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -72,8 +72,12 @@ verifiers {
     }
     buckets {
       name: "master.tryserver.chromium.mac"
+      # https://crbug.com/739556; make this non-experimental ASAP.
+      builders {
+        name: "ios-device"
+        experiment_percentage: 100
+      }
       # https://crbug.com/739556
-      # builders { name: "ios-device" }
       # builders { name: "ios-device-xcode-clang" }
       builders { name: "ios-simulator" }
       # builders { name: "ios-simulator-xcode-clang" }
