--- a/ui/gl/BUILD.gn
+++ b/ui/gl/BUILD.gn
@@ -15,7 +15,7 @@ declare_args() {
                        (target_cpu == "x86" || target_cpu == "x64")
 }
 
-use_egl = is_win || is_android || is_linux
+use_egl = is_win || is_android || is_linux || is_fuchsia
 use_glx = use_x11 || ozone_platform_x11
 
 if (is_android) {
