Refactor watch time reporting into a mojo service.
It's not sustainable to continue to stuff metrics into the MediaInternals
reporter. Since these values aren't even displayed in the internals page
they should go into their own mojo service. Which has the benefit of
being a much simpler implmentation to boot.

BUG=716643, 735238
TEST=tbd

Change-Id: I0565422fbf70eba676dc22e08ea22cec88f09778

--- a/content/browser/BUILD.gn
+++ b/content/browser/BUILD.gn
@@ -1020,6 +1020,8 @@ source_set("browser") {
     "media/session/media_session_uma_helper.h",
     "media/url_provision_fetcher.cc",
     "media/url_provision_fetcher.h",
+    "media/watch_time_recorder.cc",
+    "media/watch_time_recorder.h",
     "memory/memory_condition_observer.cc",
     "memory/memory_condition_observer.h",
     "memory/memory_coordinator_default_policy.cc",
