Move PlatformColor and ResourceFormat to viz
This CL moves:

cc/resources/resource_format.h => components/viz/common/quads
cc/resources/resoure_format_utils.{cc|h} =>
components/viz/common/resources
cc/resources/platform_color* => components/viz/common/resources.

This CL also moves out the functions in resource_format to
resource_format_utils.

The rest of the changes are just updating includes, namespaces and
DEPS.

Bug: 722935
Change-Id: I4b861448df64f08733dac254525f1770336f9254

--- a/components/viz/common/BUILD.gn
+++ b/components/viz/common/BUILD.gn
@@ -12,9 +12,14 @@ source_set("common") {
     "gl_helper_readback_support.h",
     "gl_helper_scaling.cc",
     "gl_helper_scaling.h",
+    "quads/resource_format.h",
+    "resources/platform_color.h",
+    "resources/resource_format_utils.cc",
+    "resources/resource_format_utils.h",
   ]
 
   deps = [
+    "//base",
     "//gpu/command_buffer/client:gles2_interface",
     "//skia",
     "//ui/gfx/geometry",
@@ -29,6 +34,7 @@ source_set("common") {
 source_set("unit_tests") {
   testonly = true
   sources = [
+    "resources/platform_color_unittest.cc",
     "yuv_readback_unittest.cc",
   ]
 
