[Not ready] Crash-resistant URL logging
We can't use NetLogObserver because it buffers file writing and is 
not suitable when a crash occurs. Clusterfuzz needs a crash-resistant 
URL logging mechanism.

Bug: 715656
Change-Id: I18e96afb5c5deb84d51691760606c79061751369

--- a/net/BUILD.gn
+++ b/net/BUILD.gn
@@ -983,6 +983,8 @@ component("net") {
       "http2/tools/http2_bug_tracker.h",
       "log/file_net_log_observer.cc",
       "log/file_net_log_observer.h",
+      "log/log_urls_to_file.cc",
+      "log/log_urls_to_file.h",
       "log/net_log_util.cc",
       "log/net_log_util.h",
       "log/trace_net_log_observer.cc",
