--- a/components/viz/common/BUILD.gn
+++ b/components/viz/common/BUILD.gn
@@ -26,18 +26,14 @@ source_set("common") {
   ]
 }
 
+# These tests don't run on Android so this target isn't in viz_unittests. If you
+# add a test here that should run on Android you need to change that.
 source_set("unit_tests") {
   testonly = true
   sources = [
+    "gl_helper_unittest.cc",
     "yuv_readback_unittest.cc",
   ]
-
-  if (!is_android) {
-    sources += [
-      # Many of these fail on Android with the test GL implementation.
-      "gl_helper_unittest.cc",
-    ]
-  }
 
   deps = [
     ":common",
