--- a/remoting/ios/app/BUILD.gn
+++ b/remoting/ios/app/BUILD.gn
@@ -46,6 +46,8 @@ source_set("common_source_set") {
     "remoting_theme.mm",
     "remoting_view_controller.h",
     "remoting_view_controller.mm",
+    "side_menu_items.h",
+    "side_menu_items.mm",
   ]
 
   deps = [
