Move UI rendering into UiRenderer.
- UiRenderer is independent from GVR. Thus, it can be used on platforms other than Android.

Change-Id: Ibb836799d95be28f85e6e2f84901d613858c708d
Bug:

--- a/chrome/browser/android/vr_shell/BUILD.gn
+++ b/chrome/browser/android/vr_shell/BUILD.gn
@@ -61,6 +61,7 @@ static_library("vr_common") {
     "toolbar_state.cc",
     "toolbar_state.h",
     "ui_browser_interface.h",
+    "ui_element_renderer.h",
     "ui_elements/button.cc",
     "ui_elements/button.h",
     "ui_elements/exclusive_screen_toast.cc",
@@ -92,11 +93,19 @@ static_library("vr_common") {
     "ui_input_manager.cc",
     "ui_input_manager.h",
     "ui_interface.h",
+    "ui_renderer.cc",
+    "ui_renderer.h",
     "ui_scene.cc",
     "ui_scene.h",
     "ui_scene_manager.cc",
     "ui_scene_manager.h",
     "ui_unsupported_mode.h",
+    "vr_controller_model.cc",
+    "vr_controller_model.h",
+    "vr_gl_util.cc",
+    "vr_gl_util.h",
+    "vr_shell_renderer.cc",
+    "vr_shell_renderer.h",
   ]
 
   deps = [
@@ -135,14 +144,10 @@ if (is_android) {
       "vr_compositor.h",
       "vr_controller.cc",
       "vr_controller.h",
-      "vr_controller_model.cc",
-      "vr_controller_model.h",
       "vr_core_info.cc",
       "vr_core_info.h",
       "vr_gl_thread.cc",
       "vr_gl_thread.h",
-      "vr_gl_util.cc",
-      "vr_gl_util.h",
       "vr_input_manager.cc",
       "vr_input_manager.h",
       "vr_metrics_util.cc",
@@ -153,7 +158,6 @@ if (is_android) {
       "vr_shell_delegate.h",
       "vr_shell_gl.cc",
       "vr_shell_gl.h",
-      "vr_shell_renderer.cc",
       "vr_shell_renderer.h",
       "vr_usage_monitor.cc",
       "vr_usage_monitor.h",
