[CRD iOS] Implement SideMenuItem
Implement SideMenuItem and SideMenuItemsProvider in Chromium to define the list
of items to be shown on the internal build's side menu.

Bug: 740240
Change-Id: I8577024a67b741453b9dbc757f02bede0da6927f

--- a/remoting/ios/app/BUILD.gn
+++ b/remoting/ios/app/BUILD.gn
@@ -48,6 +48,8 @@ source_set("common_source_set") {
     "remoting_view_controller.mm",
     "session_reconnect_view.h",
     "session_reconnect_view.mm",
+    "side_menu_items.h",
+    "side_menu_items.mm",
   ]
 
   deps = [
